some language fixes and contrast color for error message

--- a/src/Styling/Admin.css
+++ b/src/Styling/Admin.css
@@ -35,5 +35,5 @@ li {
 }
 
 .errorMessage{
-    color: red;
+    color:	#800033;
 }
